create questions doc
